// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display a field with a required label 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Testlabel
         *
      </label>
      <div>
        Test
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Display a field with an error 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field error"
    >
      <label
        class="label"
      >
        Testlabel
      </label>
      <div>
        Test
      </div>
      <div
        class="errorLabel"
      >
        Error! Help!
      </div>
    </div>
  </div>
</div>
`;

exports[`Display a field with colSpan and after space 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-7 space-before-0 space-after-5"
  >
    <div
      class="field"
    >
      <div>
        Test
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Display a field with description 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <div>
        Test
      </div>
      <div
        class="descriptionLabel"
      >
        Testdescription
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Display a field with label 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field dark"
    >
      <label
        class="label"
      >
        Test
      </label>
      <p>
        Test
      </p>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Display a field with label and type 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Test
        <button
          class="type"
          type="button"
        >
          <span
            class="typeDelimiter"
          >
            •
          </span>
          Work
          <span
            aria-label="su-angle-down"
            class="su-angle-down typeIcon"
          />
        </button>
      </label>
      <p>
        Test
      </p>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Display a field without label 1`] = `
<div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <p>
        Test
      </p>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;
